--- a/containers/link-manager-basex/docker-compose.yml
+++ b/containers/link-manager-basex/docker-compose.yml
@@ -14,12 +14,10 @@ services:
   linkmgr-basex:
     image: dfst/link-manager-basex
     container_name: linkmgr-dfst
-    # Put the data in the Docker Machine so it
-    # persists as long as the machine is preserved.
-    volumes: ["/Users/ekimber/tmp/basex/data:/data"]
+    volumes: ["${HOME}/tmp/basex/data:/data"]
     ports: 
      - "1984:1984"
-     - "8984:8984"
+     - "${LINKMGR_PORT}:8984"
   
 #
 # End of YAML file.
