--- a/containers/gitlab-dfst/docker-compose.yml
+++ b/containers/gitlab-dfst/docker-compose.yml
@@ -9,11 +9,11 @@ services:
   gitlab-dfst:
     # hostname: ${HOSTNAME}
     ports: 
-      - "80:80"
+      - "${GITLAB_PORT}:80"
       - "443:443"
       - "8022:22"
     container_name: gitlab-dfst
-    volumes: ["/Users/ekimber/tmp/gitlab:/var/opt/gitlab"]
+    volumes: ["${HOME}/tmp/gitlab:/var/opt/gitlab"]
      
     image: dfst/gitlab-dfst
 #
