--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -78,56 +78,168 @@ services:
  
 #
 # GitLab
-
+#
+# NOTE: Using extends with a separate compose file caused gitlab startup to
+#       fail because it didn't have correct permissions on the potsgresql 
+#       server to configure the pg_trgm feature. I don't know why.
 #
 # Copied from https://github.com/sameersbn/docker-gitlab/blob/master/docker-compose.yml
 #
 # Runs the required postgresql and redis servers:
 #
-  postgresql:
-    restart: always
-    image: sameersbn/postgresql:9.4-12
-    environment:
-      - DB_USER=gitlab
-      - DB_PASS=password
-      - DB_NAME=gitlabhq_production
-      - DB_EXTENSION=pg_trgm
-    volumes:
-      - ${HOME}/tmp/docker/gitlab/postgresql:/var/lib/postgresql
-    
   redis:
     restart: always
     image: sameersbn/redis:latest
     command:
     - --loglevel warning
-    container_name: redis
     volumes:
-      - ${HOME}/tmp/docker/gitlab/redis:/var/lib/redis      
+    - /Users/ekimber/temp/gitlab-sameersbn/data/redis:/var/lib/redis:Z
 
-#
-# The GitLab server provides two services:
-#
-# - Shared git access
-# - Continuous integration for automating 
-#   builds (e.g., HTML and PDF generation)
-#   
-  gitlab:
-  
-    extends:
-       file: gitlab-dfst/docker-compose.yml
-       service: gitlab-dfst
+  postgresql:
+    restart: always
+    image: sameersbn/postgresql:9.6-2
+    volumes:
+    - /Users/ekimber/temp/gitlab-sameersbn/data/postgresql:/var/lib/postgresql:Z
+    environment:
+    - DB_USER=gitlab
+    - DB_PASS=password
+    - DB_NAME=gitlabhq_production
+    - DB_EXTENSION=pg_trgm
 
+  gitlab-dfst:
+    restart: always
+    image: sameersbn/gitlab:8.16.6
+    container_name: gitlab-dfst
     depends_on:
       - redis
       - postgresql
-      
+       
+    volumes:
+      - ${HOME}/tmp/gitlab/git-data:/var/opt/gitlab/git-data
+
+    ports:
+      - "${GITLAB_PORT}:80"
+      - "${GITLAB_SSH_PORT}:22"
     environment:
       - GITLAB_SECRETS_DB_KEY_BASE=S8ZRV6kN43LQ2sQVmVfTlM32jLzj8FFLf6L6WzxtjwqnXkZlzpc5tc3C7cXbgrqt
       - GITLAB_SECRETS_SECRET_KEY_BASE=S8ZRV6kN43LQ2sQVmVfTlM32jLzj8FFLf6L6WzxtjwqnXkZlzpc5tc3C7cXbgrqt
       - GITLAB_SECRETS_OTP_KEY_BASE=S8ZRV6kN43LQ2sQVmVfTlM32jLzj8FFLf6L6WzxtjwqnXkZlzpc5tc3C7cXbgrqt
-      
-    volumes:
-      - ${HOME}/tmp/gitlab/git-data:/var/opt/gitlab/git-data
+      - DEBUG=false
+  
+      - DB_ADAPTER=postgresql
+      - DB_HOST=postgresql
+      - DB_PORT=5432
+      - DB_USER=gitlab
+      - DB_PASS=password
+      - DB_NAME=gitlabhq_production
+  
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+  
+      - TZ=Asia/Kolkata
+      - GITLAB_TIMEZONE=Kolkata
+  
+      - GITLAB_HTTPS=false
+      - SSL_SELF_SIGNED=false
+  
+      - GITLAB_HOST=localhost
+      - GITLAB_PORT=${GITLAB_PORT}
+      - GITLAB_SSH_PORT=${GITLAB_SSH_PORT}
+      - GITLAB_RELATIVE_URL_ROOT=
+      - GITLAB_SECRETS_DB_KEY_BASE=long-and-random-alphanumeric-string
+      - GITLAB_SECRETS_SECRET_KEY_BASE=long-and-random-alphanumeric-string
+      - GITLAB_SECRETS_OTP_KEY_BASE=long-and-random-alphanumeric-string
+  
+      - GITLAB_ROOT_PASSWORD=
+      - GITLAB_ROOT_EMAIL=
+  
+      - GITLAB_NOTIFY_ON_BROKEN_BUILDS=true
+      - GITLAB_NOTIFY_PUSHER=false
+  
+      - GITLAB_EMAIL=notifications@example.com
+      - GITLAB_EMAIL_REPLY_TO=noreply@example.com
+      - GITLAB_INCOMING_EMAIL_ADDRESS=reply@example.com
+  
+      - GITLAB_BACKUP_SCHEDULE=daily
+      - GITLAB_BACKUP_TIME=01:00
+  
+      - SMTP_ENABLED=false
+      - SMTP_DOMAIN=www.example.com
+      - SMTP_HOST=smtp.gmail.com
+      - SMTP_PORT=587
+      - SMTP_USER=mailer@example.com
+      - SMTP_PASS=password
+      - SMTP_STARTTLS=true
+      - SMTP_AUTHENTICATION=login
+  
+      - IMAP_ENABLED=false
+      - IMAP_HOST=imap.gmail.com
+      - IMAP_PORT=993
+      - IMAP_USER=mailer@example.com
+      - IMAP_PASS=password
+      - IMAP_SSL=true
+      - IMAP_STARTTLS=false
+  
+      - OAUTH_ENABLED=false
+      - OAUTH_AUTO_SIGN_IN_WITH_PROVIDER=
+      - OAUTH_ALLOW_SSO=
+      - OAUTH_BLOCK_AUTO_CREATED_USERS=true
+      - OAUTH_AUTO_LINK_LDAP_USER=false
+      - OAUTH_AUTO_LINK_SAML_USER=false
+      - OAUTH_EXTERNAL_PROVIDERS=
+  
+      - OAUTH_CAS3_LABEL=cas3
+      - OAUTH_CAS3_SERVER=
+      - OAUTH_CAS3_DISABLE_SSL_VERIFICATION=false
+      - OAUTH_CAS3_LOGIN_URL=/cas/login
+      - OAUTH_CAS3_VALIDATE_URL=/cas/p3/serviceValidate
+      - OAUTH_CAS3_LOGOUT_URL=/cas/logout
+  
+      - OAUTH_GOOGLE_API_KEY=
+      - OAUTH_GOOGLE_APP_SECRET=
+      - OAUTH_GOOGLE_RESTRICT_DOMAIN=
+  
+      - OAUTH_FACEBOOK_API_KEY=
+      - OAUTH_FACEBOOK_APP_SECRET=
+  
+      - OAUTH_TWITTER_API_KEY=
+      - OAUTH_TWITTER_APP_SECRET=
+  
+      - OAUTH_GITHUB_API_KEY=
+      - OAUTH_GITHUB_APP_SECRET=
+      - OAUTH_GITHUB_URL=
+      - OAUTH_GITHUB_VERIFY_SSL=
+  
+      - OAUTH_GITLAB_API_KEY=
+      - OAUTH_GITLAB_APP_SECRET=
+  
+      - OAUTH_BITBUCKET_API_KEY=
+      - OAUTH_BITBUCKET_APP_SECRET=
+  
+      - OAUTH_SAML_ASSERTION_CONSUMER_SERVICE_URL=
+      - OAUTH_SAML_IDP_CERT_FINGERPRINT=
+      - OAUTH_SAML_IDP_SSO_TARGET_URL=
+      - OAUTH_SAML_ISSUER=
+      - OAUTH_SAML_LABEL="Our SAML Provider"
+      - OAUTH_SAML_NAME_IDENTIFIER_FORMAT=urn:oasis:names:tc:SAML:2.0:nameid-format:transient
+      - OAUTH_SAML_GROUPS_ATTRIBUTE=
+      - OAUTH_SAML_EXTERNAL_GROUPS=
+      - OAUTH_SAML_ATTRIBUTE_STATEMENTS_EMAIL=
+      - OAUTH_SAML_ATTRIBUTE_STATEMENTS_NAME=
+      - OAUTH_SAML_ATTRIBUTE_STATEMENTS_FIRST_NAME=
+      - OAUTH_SAML_ATTRIBUTE_STATEMENTS_LAST_NAME=
+  
+      - OAUTH_CROWD_SERVER_URL=
+      - OAUTH_CROWD_APP_NAME=
+      - OAUTH_CROWD_APP_PASSWORD=
+  
+      - OAUTH_AUTH0_CLIENT_ID=
+      - OAUTH_AUTH0_CLIENT_SECRET=
+      - OAUTH_AUTH0_DOMAIN=
+  
+      - OAUTH_AZURE_API_KEY=
+      - OAUTH_AZURE_API_SECRET=
+      - OAUTH_AZURE_TENANT_ID=
       
     volumes_from:
       - dita-ot
