--- a/containers/link-manager-basex/Dockerfile
+++ b/containers/link-manager-basex/Dockerfile
@@ -10,7 +10,7 @@ MAINTAINER Eliot Kimber "ekimber@contrext.com"
 #
 # Get the BaseX Ruby client and add it to the bin/ directory so we have it handy 
 # if we need it (but note that the GitLab container also gets its own copy of this
-# file and stores it with the post-receive git hook there.
+# file and stores it with the post-receive git hook there).
 RUN wget -O bin/BaseXClient.rb https://github.com/BaseXdb/basex/raw/master/basex-api/src/main/ruby/BaseXClient.rb && \
   chmod a+x bin/*.rb && \
   ls -al bin
