Basic oxygen webapp in tomcat container seems to work.

--- a/containers/docker-compose.yml
+++ b/containers/docker-compose.yml
@@ -283,6 +283,15 @@ services:
     image: ditacommunity/demo-content
     container_name: demo-content
     command: top
+
+#
+# Oxygen Web Author server
+#
+
+  oxwebauthor:
+     extends:
+        file: oxygen-web-author/docker-compose.yml
+        service: oxywebauthor-dfst
       
 #  
 # End of compose file.
