Download war file as part of build process so docker hub build will work.

--- a/containers/oxywebauthor-dfst/Dockerfile
+++ b/containers/oxywebauthor-dfst/Dockerfile
@@ -8,9 +8,12 @@ RUN apk add --update curl unzip
 
 # NOTE: current directory is /usr/local/tomcat
 
-ADD oxygenxml-web-author.war /usr/local/tomcat/webapps/
-RUN unzip webapps/oxygenxml-web-author.war -d /usr/local/tomcat/webapps/oxygenxml-web-author
-RUN rm /usr/local/tomcat/webapps/oxygenxml-web-author.war
+RUN curl --silent --show-error --fail --location \
+    "http://mirror.oxygenxml.com/InstData/WebAuthor/war/oxygenxml-web-author.war" \
+    -o webapps/oxygenxml-web-author.war && \
+    unzip webapps/oxygenxml-web-author.war -d /usr/local/tomcat/webapps/oxygenxml-web-author && \
+    rm /usr/local/tomcat/webapps/oxygenxml-web-author.war
+
 ADD settings.xml /usr/local/tomcat/conf/
 ADD tomcat-users.xml /usr/local/tomcat/conf/
 ADD license.properties /usr/local/tomcat/webapps/oxygenxml-web-author/WEB-INF/
