--- a/containers/gitlab-dfst/Dockerfile
+++ b/containers/gitlab-dfst/Dockerfile
@@ -6,16 +6,16 @@
 # container.
 FROM sameersbn/gitlab:latest
 MAINTAINER Eliot Kimber "ekimber@contrext.com"
-COPY admin-scripts /var/opt/dfst/bin/
-RUN cd /var/opt/dfst && \
-    wget https://github.com/dita-for-small-teams/dfst-git-commit-hooks/archive/develop.zip && \
+COPY admin-scripts /var/opt/d4st/bin/
+RUN cd /var/opt/d4st && \
+    wget https://github.com/dita-for-small-teams/d4st-git-commit-hooks/archive/develop.zip && \
     unzip develop.zip && \
     rm develop.zip && \
-    mv dfst-git-commit-hooks-develop/server-side custom_hooks && \
-    cd /var/opt/dfst/bin && \
+    mv d4st-git-commit-hooks-develop/server-side custom_hooks && \
+    cd /var/opt/d4st/bin && \
     chmod a+x * 
     
-ENV PATH ${PATH}:/var/opt/dfst/bin
+ENV PATH ${PATH}:/var/opt/d4st/bin
 ENTRYPOINT ["/sbin/entrypoint.sh"]
 CMD ["app:start"]
 #
