--- a/docker-compose-lnkmgrdev.yml
+++ b/docker-compose-lnkmgrdev.yml
@@ -43,7 +43,7 @@ services:
   dita-ot:
     extends:
        file: containers/dita-ot/docker-compose.yml  
-       service: dita-ot-dfst
+       service: dita-ot-d4st
     volumes_from:
        - web-delivery
  
@@ -61,8 +61,8 @@ services:
 # Link Manager server:
 #    
   linkmgr:
-    image: dfst/link-manager-basex
-    container_name: linkmgr-dfst
+    image: d4st/link-manager-basex
+    container_name: linkmgr-d4st
     ports: 
      - "1984:1984"
      - "${LINKMGR_PORT}:8984"
@@ -76,8 +76,8 @@ services:
       - "${HOME}/tmp/basex/data:/data"
       - /Users:/Users
       # Use local development versions rather than what's in the container:
-      - ${HOME}/workspace-dfst/dfst-linkmgmt-basex/modules:/repo
-      - ${HOME}/workspace-dfst/dfst-linkmgmt-basex/webapp:/webapp
+      - ${HOME}/workspace-d4st/d4st-linkmgmt-basex/modules:/repo
+      - ${HOME}/workspace-d4st/d4st-linkmgmt-basex/webapp:/webapp
   
     volumes_from:
      - dita-ot
@@ -112,11 +112,11 @@ services:
     - DB_NAME=gitlabhq_production
     - DB_EXTENSION=pg_trgm
 
-  gitlab-dfst:
+  gitlab-d4st:
     restart: always
     # image: sameersbn/gitlab:8.17.3
-    image: dfst/gitlab-dfst
-    container_name: gitlab-dfst
+    image: d4st/gitlab-d4st
+    container_name: gitlab-d4st
     depends_on:
       - redis
       - postgresql
@@ -270,8 +270,8 @@ services:
 
   web-delivery:
     extends:
-       file: containers/caddy-dfst/docker-compose.yml  
-       service: caddy-dfst
+       file: containers/caddy-d4st/docker-compose.yml  
+       service: caddy-d4st
     volumes:
       - ${HOME}/tmp/webdelivery:/srv/www
       
@@ -295,8 +295,8 @@ services:
 
   oxywebauthor:
      extends:
-        file: containers/oxywebauthor-dfst/docker-compose.yml
-        service: oxywebauthor-dfst
+        file: containers/oxywebauthor-d4st/docker-compose.yml
+        service: oxywebauthor-d4st
       
 #  
 # End of compose file.
