--- a/containers/oxywebauthor-dfst/docker-compose.yml
+++ b/containers/oxywebauthor-dfst/docker-compose.yml
@@ -7,13 +7,13 @@ version: "2"
 # server.
 # 
 services:
-  oxywebauthor-dfst:
+  oxywebauthor-d4st:
     # hostname: ${HOSTNAME}
     ports: 
       - "${OXYWEBAUTHOR_PORT}:8080"
-    container_name: oxywebauthor-dfst
+    container_name: oxywebauthor-d4st
      
-    image: dfst/oxywebauthor-dfst
+    image: d4st/oxywebauthor-d4st
 #
 # End of compose file.
 #  
