--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 
 #
-# DITA For Small Teams (DFST) Docker compose
+# DITA For Small Teams (D4ST) Docker compose
 # run configuration file. Will run all the 
 # containers with appropriate default settings. 
 #
@@ -11,7 +11,7 @@ version: "2"
 #
 # It runs the DITA OT container, the gitlab 
 # server (for shared git access and continuous
-# integration), and the DFST Link Manager application.
+# integration), and the D4ST Link Manager application.
 #
 # Gitlab is exposed on the default ports 80 and 443
 # for HTTP/HTTPS access and 8022 for SSH
@@ -47,7 +47,7 @@ services:
        - web-delivery
  
 #
-# DFST Link Manager
+# D4ST Link Manager
 #
 # The Link Manager provides link-related information
 # for use by authors via an interactive Web app
