Actually create the .basex file

--- a/containers/link-manager-basex/Dockerfile
+++ b/containers/link-manager-basex/Dockerfile
@@ -22,9 +22,8 @@ RUN wget -O /tmp/develop.zip https://github.com/dita-for-small-teams/dfst-linkmg
     cp /tmp/dfst-linkmgmt-basex-develop/modules/dba/*.xqm ${WEBAPPDIR}/dba/modules/ && \  
     cp /tmp/dfst-linkmgmt-basex-develop/modules/dba/*.xqm ${WEBAPPDIR}/dba/modules/modules/
       
-COPY basex/dot_basex  /srv/dot_basex 
-RUN touch /srv/.basex && \
-    chown basex /srv/.basex
+COPY basex/dot_basex  /srv/.basex 
+RUN chown basex /srv/.basex
 
 ENV JAVA_OPTS="-agentlib:jdwp=transport=dt_socket,server=y,address=9000,suspend=n"
 EXPOSE 9000
